Download JCEF JBR as build dependency
2020.1 EAP will no include JCEF by default.
See: https://youtrack.jetbrains.com/issue/IDEA-231833#focus=streamItem-27-3993099.0-0
Running from runIdeWithJcefJbr will ensure starting ide with current available jbr_jcef build (jbr_jcef-11_0_6b765.15).
Tested only on osx-x64.